--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@ margin-top: 50px;
         left: 50%;
         transform: translate(-50%, -50%);
         color: white; /* Set the text color */
-        font-size: 1.5em; /* Adjust the font size */
+       font-size: small;
+
     }
     
     .box-container-1 {
