--- a/index.html
+++ b/index.html
@@ -575,17 +575,22 @@ margin-top: 50px;
       </div>
 
 
-      <div class="spacer">
-        <h3>Become Host Family! Apply from here, click below</h3>
+        <div class="spacer">
+        <h1>Become Host family! Apply from here</h1>
+    </div>  
+   
+
+    <div class="spacer">
+        <h3>If you have any questions, click below</h3>
     </div>
     <div class="container">
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLSdf8JEmtcPQO7hddSOhRyT4peqgTr58nzj8VKrG4dLdEF4r6g/viewform?usp=pp_url">Go to Application Form</a>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSc4HsIUUG289KFU6yY4dDNTeJMo5wR4ZIYZEmKGIc3jnEk4jg/viewform?usp=sf_link">Go to Application Form</a>
     </div>
     <div class="spacer">
         <h3>If you have any questions, click below</h3>
     </div>
     <div class="container">
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLSfMT4IcMvd67gc-Z1OZCJt4GzesIZAkteFopdY7DX72Q0R8UQ/viewform?usp=pp_url">Go to Contact Form</a>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSfGUQ6u1Ej4lOLC_M3VfitXmR2QGs8dlLJ6u3pxIMv0sXqVvg/viewform?usp=sf_link">Go to Contact Form</a>
     </div>
    
     
